# valis

./: .dockerignore  .travis.yml  CHANGELOG.rst  Dockerfile  Dockerfile.dev  PR_INVESTIGATION_FINDINGS.md  README.md  SHALLOW_CLONE_ISSUE.md  docker-compose.yml  docker_prestart.sh  locustfile.py  pyproject.toml
.github/workflows/: build.yml  docker.yml
docker/: docker-compose.yml
docker/nginx/: nginx.conf
docker/valis/: Dockerfile  docker_prestart.sh
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
locustfiles/: api.py  dashboard.py
python/valis/: __init__.py  cache.py  cli.py  exceptions.py  main.py  settings.py  wsgi.py  wsgi_conf.py
python/valis/db/: db.py  models.py  queries.py
python/valis/io/: model_spectra_info.json  spectra.py  yanny.py
python/valis/routes/: __init__.py  access.py  auth.py  base.py  envs.py  files.py  info.py  items.py  lists.py  lvm.py  maskbits.py  mocs.py  query.py  target.py  users.py
python/valis/routes/lvm/: __init__.py  common.py  io.py  services.py
python/valis/routes/lvm/endpoints/: __init__.py  cutout.py  dap.py  drp.py  static.py
python/valis/utils/: paths.py  versions.py
scripts/: verify_pr_history.sh
tests/: conftest.py  test_access.py  test_auth.py  test_envs.py  test_files.py  test_info.py  test_lvm.py  test_lvm_cutout.py  test_lvm_dap.py  test_lvm_drp.py  test_lvm_parsers.py  test_main.py  test_maskbits.py  test_mocs.py  test_queries.py  test_targets.py  test_utils.py
