[tool.poetry]
name = "sdss-valis"
version = "0.1.0-alpha.0"
description = "the SDSS API for delivering and accessing remote information"
authors = ["Brian Cherinka <bcherinka@stsci.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/valis"
repository = "https://github.com/sdss/valis"
documentation = "https://sdss-valis.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "valis", from = "python" }
]
include = ["python/valis/etc/*", "cextern/**/*", "LICENSE.md"]
build = "build.py"

[tool.poetry.scripts]
valis = "valis.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
sdss-tree = "^4.0.0"
sdss-access = "^3.0.0"
sdsstools = "^1.0.0"
Sphinx = {version="^3.0.0", optional=true}
fastapi = "^0.94.1"
uvicorn = "^0.21.0"
gunicorn = "^20.1.0"
astropy = "^5.2.0"
aiofiles = "^0.5.0"
orjson = "^3.6.7"
fastapi-utils = "^0.2.1"
python-multipart = "^0.0.5"
httpx = "^0.22.0"
astroquery = "^0.4.6"
pandas = "^1.5.3"


[tool.poetry.dev-dependencies]
ipython = ">=7.11.0"
matplotlib = ">=3.1.1"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
rstcheck = "^3.3.1"
pylama = "^7.7.1"
pylint = "^2.6.0"

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.isort]
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "valis"
known_sdss_party = ["sdsstools"]
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--cov valis --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["python/valis/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.0"]
