[project]
authors = [
    {name = "Brian Cherinka", email = "bcherinka@stsci.edu"},
]
license = {text = "BSD-3-Clause"}
requires-python = "~=3.10"
dependencies = [
    "sdss-tree<5.0.0,>=4.0.0",
    "sdss-access<4.0.0,>=3.0.0",
    "sdsstools<2.0.0,>=1.0.0",
    "fastapi[all]<1.0.0,>=0.104.0",
    "uvicorn<1.0.0,>=0.22.0",
    "gunicorn<21.0.0,>=20.1.0",
    "astropy<7.0.0,>=6.1.0",
    "aiofiles<1.0.0,>=0.5.0",
    "orjson<4.0.0,>=3.9.0",
    "fastapi-restful[all]<1.0.0,>=0.5.0",
    "python-multipart<1.0.0,>=0.0.5",
    "httpx<1.0.0,>=0.24.0",
    "astroquery<=0.4.7,>=0.4.6",
    "pandas<2.0.0,>=1.5.3",
    "SQLAlchemy<2.0.0,>=1.4.35",
    "sdssdb<1.0.0,>=0.13.1",
    "deepmerge<2.0.0,>=1.1.1",
    "fuzzy-types<1.0.0,>=0.1.3",
    "markdown<4.0,>=3.7",
    "fastapi-cache2[redis]<1.0.0,>=0.2.2",
]
name = "sdss-valis"
version = "0.1.1-alpha"
description = "the SDSS API for delivering and accessing remote information"
readme = "README.md"
keywords = [
    "astronomy",
    "software",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/sdss/valis"
repository = "https://github.com/sdss/valis"
documentation = "https://sdss-valis.readthedocs.org"

[dependency-groups]
dev = [
    "ipython>=7.11.0",
    "matplotlib>=3.1.1",
    "flake8>=3.7.9",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "isort>=4.3.21",
    "codecov>=2.1.10",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck<4.0.0,>=3.3.1",
    "pylama<8.0.0,>=7.7.1",
    "pylint<3.0.0,>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["python/valis"]
includes = [
    "python/valis",
    "python/valis/etc/*",
    "cextern/**/*",
    "LICENSE.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=7.11.0",
    "matplotlib>=3.1.1",
    "flake8>=3.7.9",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "isort>=4.3.21",
    "codecov>=2.1.10",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck<4.0.0,>=3.3.1",
    "pylama<8.0.0,>=7.7.1",
    "pylint<3.0.0,>=2.6.0",
]

[project.optional-dependencies]
docs = [
    "Sphinx<4.0.0,>=3.0.0",
]
solara = [
    "sdss-solara @ git+https://github.com/sdss/sdss_solara.git@riley",
]

[project.scripts]
valis = "valis.cli:main"

[tool.isort]
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "valis"
known_sdss_party = ["sdsstools"]
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--cov valis --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["python/valis/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
]

