
[project]
name = "sdss-valis"
version = "0.2.1-alpha"
description = "the SDSS API for delivering and accessing remote information"
readme = "README.md"
requires-python = ">=3.10"
license =  "BSD-3-Clause"

authors = [
  { name = "Brian Cherinka", email = "bcherinka@stsci.edu" },
]
dependencies = [
    "aiofiles>=24.1.0",
    "astropy>=6.1.7,<7",
    "astroquery<=0.4.7",
    "deepmerge>=2.0",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi-restful[all]>=0.6.0",
    "fastapi[all]>=0.118.0",
    "fuzzy-types>=0.1.3",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "markdown>=3.9",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "sdss-access>=3.0.10",
    "sdss-tree>=4.0.10",
    "sdssdb>=0.13.4",
    "sdsstools>=1.9.2",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
solara = [
    "sdss-solara",
]
docs = [
    "sphinx>=8.1.3",
]

[project.urls]
repository = "https://github.com/sdss/valis"

[project.scripts]
valis = "valis.cli:main"

[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "ipython>=8.37.0",
    "matplotlib>=3.10.6",
    "pylama>=8.4.1",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "ruff>=0.13.3",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
sdss-solara = { git = "https://github.com/sdss/sdss_solara", rev = "main" }

[tool.setuptools]
zip-safe = false
package-dir = {"" = "python"}
license-files = ["LICENSE.md"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["python"]
exclude = ["*.tests"]
namespaces = false

[tool.setuptools.package-data]
valis = ["etc/*"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.coverage.run]
branch = true
include = ["python/valis/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
]

[tool.ruff]
line-length = 120
target-version = 'py312'
exclude = ["typings/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["valis"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools"]
